--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,21 @@
 {
     "name": "admin/php-helpers",
+    "description": "Provides php helpers.",
+    "keywords": ["php", "helpers"],
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "coderius",
+            "email": "sunrise4fun@gmail.com"
+        }
+    ],
+    "require": {
+        "php": "^7.2.0|^8.0"
+    },
+    "require-dev": {
+        "mockery/mockery": "^1.3.1",
+        "phpunit/phpunit": "^9.5"
+    },
     "autoload": {
         "psr-4": {
             "PhpHelpers\\": "src/"
@@ -10,15 +26,7 @@
             "Tests\\": "tests/"
         }
     },
-    "require-dev": {
-        "mockery/mockery": "^1.3.1",
-        "phpunit/phpunit": "^9.5"
-    },
-    "authors": [
-        {
-            "name": "coderius",
-            "email": "sunrise4fun@gmail.com"
-        }
-    ],
-    "require": {}
+    
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
